tests/NormalTests/paczka1/fuzzy1/78421151.err
Error in line 5: xnRZ0jWnL8 S529 46,3
Error in line 6: xnRZ0jWnL8 S610 92,8
Error in line 8: xnRZ0jWnL8 A876 88,3
Error in line 10: xnRZ0jWnL8 S610 69,5
Error in line 32: btgiF A352 26,7
